force-app/main/default/objects/CBK_AuditLogEvent__e/CBK_AuditLogEvent__e.object-meta.xml
<CustomObject>
    <description>Evento de plataforma (Platform Event) que se utilizará en la modalidad de registro de auditoría asíncrono.</description>
    <label>Audit Log Event</label>
    <pluralLabel>Audit Log Events</pluralLabel>
</CustomObject>