force-app/main/default/objects/CBK_AuditLogEvent__e/fields/CBK_RegistroTipoObjeto__c.field-meta.xml
<CustomField>
    <fullName>CBK_RegistroTipoObjeto__c</fullName>
    <description>Texto con el tipo de Sobject auditado</description>
    <label>Tipo Objeto Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>