force-app/main/default/objects/CBK_AuditLogEvent__e/fields/CBK_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CBK_Tipo__c</fullName>
    <description>Tipo de funcionalidad/actividad auditada.</description>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>