force-app/main/default/objects/CBK_AuditLogEvent__e/fields/CBK_UsuarioAuditoriaEmail__c.field-meta.xml
<CustomField>
    <fullName>CBK_UsuarioAuditoriaEmail__c</fullName>
    <description>Email del usuario que llevó a cabo la operación auditada.</description>
    <label>Usuario Auditoría Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>